# Voxel

./: CMakeLists.txt  glad.c  main.cpp
src/game/: VoxelGame.cpp  VoxelGame.h
src/game/systems/: System.h
src/game/systems/eventhandler/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  Observer.cpp  Observer.h
src/game/systems/gamelogic/: GameLogicSystem.cpp  GameLogicSystem.h
src/game/systems/gamelogic/player/: PlayerController.cpp  PlayerController.h
src/game/systems/gamelogic/world/: Block.h  World.cpp  World.h
src/game/systems/gamelogic/world/chunk/: Chunk.cpp  Chunk.h
src/game/systems/gamelogic/world/events/: LoadChunkEvent.cpp  LoadChunkEvent.h  UnloadChunkEvent.cpp  UnloadChunkEvent.h  WorldEventHandler.cpp  WorldEventHandler.h
src/game/systems/gfx/: GameRenderSystem.cpp  GameRenderSystem.h
src/game/systems/gfx/GLWrappers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/game/systems/gfx/camera/: Camera.cpp  Camera.h
src/game/systems/gfx/chunkrenderer/: ChunkMesh.cpp  ChunkMesh.h  ChunkRenderer.cpp  ChunkRenderer.h
src/game/systems/gfx/shaders/: BasicFragShader.GLSL  BasicVertexShader.GLSL  Shader.cpp  Shader.h
src/game/systems/gfx/textures/: Texture.cpp  Texture.h
src/game/systems/gfx/ui/: UI.cpp  UI.h
src/game/systems/gfx/windows/: window.cpp  window.h
src/game/systems/gfx/worldrenderer/: WorldRenderer.cpp  WorldRenderer.h
src/game/systems/input/: InputHandler.cpp  InputHandler.h
